Way cooler menu transition (works on mobile [in theory]) and fixed events alignment (big screens)

--- a/src/data/stylesheets/article.styl
+++ b/src/data/stylesheets/article.styl
@@ -11,6 +11,7 @@
     display flex
     height 100%
     width 100%
+    align-content flex-start
     &, &.horizontal
         flex-flow column wrap
         overflow-x auto
