--- a/src/data/stylesheets/grid.styl
+++ b/src/data/stylesheets/grid.styl
@@ -1,6 +1,12 @@
-> .container > section
-        position fixed
-        top asideheight
+.container 
+    position absolute
+    top asideheight
+    bottom 0
+    left 0
+    right 0
+    > section
+        position absolute
+        top 0
         bottom 0
         left 0
         right 0
@@ -26,26 +32,3 @@
         > div
             width 100%
             height 100%
-> .shade
-    position fixed
-    top asideheight
-    bottom 0
-    right 0
-    left 0
-    opacity 0
-    z-index -1
-    img 
-        position absolute
-        bottom 25px
-        right 25px
-        z-index 2
-
-    .darkness
-        position absolute
-        top 0
-        bottom 0
-        left 0
-        right 0
-        background white
-        opacity 0.7
-        z-index 1
