--- a/src/data/stylesheets/index.styl
+++ b/src/data/stylesheets/index.styl
@@ -3,7 +3,7 @@ body, html
     height 100%
     margin 0
     padding 0
-    background #000
+    background white
 
 body
     font-size 10pt
@@ -32,7 +32,7 @@ body #wrapper > div > section
     position fixed
     top 0
     left 0
-    perspective 600
+    perspective 600px
     transition transform 0.7s timing, opacity 0.7s timing
     opacity 0
     z-index -1
